--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/luuthanhminh/fake_json#readme",
   "dependencies": {
+    "chance": "^1.1.8",
     "json-schema-faker": "^0.5.0-rcv.40"
   },
   "devDependencies": {
